# faces

./: .coverage  .coveragerc  .gitignore  README.md  definitions.py  index.json  link.sh  makefile  out.mkv  pyproject.toml  pytest.ini  requirements.txt  timeline.txt
.github/workflows/: cache.yml  codeql-analysis.yml  main.yml
backend/: app.py  container.py  processor.py  settings.py  utils.py
backend/db/: database.py  redis.py  tinydb.py
backend/extractors/: converter.py  filemanager.py  landmarker.py  operator.py  painter.py  presenter.py
backend/file/: slideshow.py  timeline.py  utils.py
backend/network/: database.py  redis.py  tinydb.py
code/: app.py  faces.pickle  landmarker.py  landmarks.py  recognizer.py  run.sh  script.txt  test.py  utils.py  v0.py  v1.py
code/extractors/: converter.py  filemanager.py  landmarker.py  operator.py  painter.py  presenter.py  reader.py
code/factory/: corrector.py  starter.py
code/file/: utils.py
code/modules/: corrector.py  pipe2image.py  starter.py
code/network/: database.py
deprecated/: eye.xml  face.xml  landmarker.py  landmarks.py  recognizer.py  run.sh  script.txt
deprecated/factory/: starter.py
env/: dev.env  prod.env  test.env
res_test/: IMG_0000.HEIC  IMG_0518.HEIC  IMG_0578.HEIC  IMG_0588.HEIC
stubs/: dlib.pyi  exifread.pyi  piexif.pyi  pyheif.pyi
stubs/cv2/: cv2.pyi
stubs/logging/: __init__.pyi
tests/: conftest.py  logs.py  utils.py
tests/data/: IMG_4541.HEIC  extract_center_test.HEIC  face.numpy.ndarray
tests/end2end/: conftest.py  test_processing.py
tests/unit/: test_converter.py  (+6 more)
(+1 files in other folders)
